# BLE-Mesh-Smarthome

./: README.md
custom_model/node_client_1/: CMakeLists.txt  sdkconfig.old
custom_model/node_client_1/main/: CMakeLists.txt  common.h  custom_sensor_model_defs.h  header.h  main.c  mesh_client.c  mesh_client.h  mesh_device_app.c  mesh_device_app.h  mesh_server.h  relay.c
custom_model/node_client_2/: CMakeLists.txt  sdkconfig
custom_model/node_client_2/main/: CMakeLists.txt  bh1750.c  bh1750.h  custom_sensor_model_defs.h  header.h  main.c  mesh_client.c  relay.h
custom_model/node_client_3/: CMakeLists.txt
custom_model/node_client_3/main/: CMakeLists.txt  common.h  custom_sensor_model_defs.h  header.h  main.c  mesh_client.c  mesh_server.c  rfid_servo.c  rfid_servo.h
custom_model/node_server/: CMakeLists.txt  partitions.csv  sdkconfig
custom_model/node_server/main/: CMakeLists.txt  app_mqtt.c  app_mqtt.h  board.c  board.h  common.h  custom_sensor_model_defs.h  header.h  main.c  mesh_client.c  mesh_client.h  mesh_device_app.c  mesh_device_app.h  mesh_server.c  mesh_server.h  message.c  message.h  oled.c  oled.h
custom_model/node_server/main/ssd1306/: idf_component.yml  ssd1306.c
onoff_models/onoff_client/: sdkconfig  sdkconfig.old
onoff_models/onoff_client/main/: main.c
onoff_models/onoff_server/: sdkconfig  sdkconfig.old
onoff_models/onoff_server/main/: main.c
